...
  static const passwordError = 'Mật khẩu tối thiểu 6 ký tự';

  static const rememberMe = 'Ghi nhớ';
  static const forgotPassword = 'Quên mật khẩu?';
  static const comingSoon = 'Tính năng đang được phát triển';

  static const submit = 'Đăng nhập →';
  static const createAccount = 'Đăng ký tài khoản mới';
  static const orSignInWith = 'Hoặc đăng nhập bằng';
  static const google = 'Google';
  static const lark = 'Lark';
  static const noAccountYet = 'Bạn chưa có tài khoản?';
  static const registerNow = 'Đăng ký ngay';

...
